--- a/appdefs.yml
+++ b/appdefs.yml
@@ -27,6 +27,10 @@ app:
     category: "MediaApp:Photos"
   documentation:
   changelog:
+    - version: 25.10.1
+      date: 2025-10-06
+      changes:
+        - 'Updated XnView MP to version 1.9.4.'
     - version: 25.09.1
       date: 2025-09-13
       changes:
