--- a/appdefs.yml
+++ b/appdefs.yml
@@ -27,6 +27,10 @@ app:
     category: "MediaApp:Photos"
   documentation:
   changelog:
+    - version: 25.11.2
+      date: 2025-11-11
+      changes:
+        - 'Fixed support of HEIC images.'
     - version: 25.11.1
       date: 2025-11-11
       changes:
